--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
 
     <build>
